--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ demos/test0518.html
 demos/test0518b.html
 jspsych-psychophysics03.js
 calc_velocityを変更しようとしてやめたやつ.js
+jspsych-psychophysics20200912.js
