Event listeners regarding to the mouse and keyboard events were implemented.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ demos/test0518b.html
 jspsych-psychophysics03.js
 calc_velocityを変更しようとしてやめたやつ.js
 jspsych-psychophysics20200912.js
+jspsych-psychophysics1013.js
