--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ jspsych-psychophysics03.js
 calc_velocityを変更しようとしてやめたやつ.js
 jspsych-psychophysics20200912.js
 jspsych-psychophysics1013.js
+jspsych-psychophysics-2020_1113.js
