updated to the jsPsych v6.2.0

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ calc_velocityを変更しようとしてやめたやつ.js
 jspsych-psychophysics20200912.js
 jspsych-psychophysics1013.js
 jspsych-psychophysics-2020_1113.js
+jspsych-6.2.0/
+old-jspsych/
