--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: jspsych-psychophysics plugin
+title: jspsych-psychophysics
 subtitle: A jsPsych plugin for online psychophysical experiments.
 email:
 description: >- # this means to ignore newlines until "baseurl:"
@@ -109,9 +109,3 @@ category_archive:
 tag_archive:
   type: liquid
   path: /tags/
-
----
-toc: true
-toc_label: "My Table of Contents"
-toc_icon: "cog"
----
