Updated _config.yml and index.md

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -25,8 +25,8 @@ search: true
 
 # Build settings
 markdown: kramdown
-remote_theme: "mmistakes/minimal-mistakes@4.22.0"
-# remote_theme: mmistakes/minimal-mistakes
+#remote_theme: "mmistakes/minimal-mistakes@4.22.0"
+remote_theme: mmistakes/minimal-mistakes
 # Outputting
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
