--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -59,7 +59,7 @@ plugins:
 
 author:
   name   : "Daiichiro Kuroki"
-  avatar : "/assets/images/bio-photo.jpg"
+  #avatar : "/assets/images/bio-photo.jpg"
   bio    : "My awesome biography constrained to a sentence or two goes here."
   links:
     - label: "Website"
