--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -58,22 +58,16 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "Daiichiro Kuroki"
+  #name   : "Daiichiro Kuroki"
   #avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  #bio    : "My awesome biography constrained to a sentence or two goes here."
   links:
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+      url: "https://twitter.com/kurokida1"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://github.com/kurokida"
 
 footer:
   links:
