--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -79,6 +79,13 @@ footer:
       url: "https://github.com/kurokida"
 
 defaults:
+  # _docs
+  - scope:
+      path: ""
+      type: docs
+    values:
+      sidebar:
+        nav: "docs"
   # _posts
   - scope:
       path: ""
