Changed the type in _config.yml

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -82,7 +82,8 @@ defaults:
   # _docs
   - scope:
       path: ""
-      type: docs
+      #type: docs
+      type: pages
     values:
       sidebar:
         nav: "docs"
