--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -101,7 +101,7 @@ defaults:
   # _pages
   - scope:
       path: ""
-      #type: pages
+      type: pages
     values:
       layout: single
       author_profile: true
