--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,6 +22,7 @@ twitter_username: kurokida1
 github_username: kurokida
 minimal_mistakes_skin: air
 search: true
+search_full_content: true
 
 # Build settings
 markdown: kramdown
