--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -5,7 +5,7 @@ docs:
         url: /
       - title: "Parameters of the plugin"
         url: /pluginParams/
-      - title: "Stimulus properties"
+      - title: "Parameters of stimuli"
         url: /objectProperties/
       - title: "Demonstrations"
         url: /demo_explanation/
